--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@antv/g2plot": "^1.1.7",
+    "@kennethormandy/react-fittext": "^0.6.0",
     "@material-ui/core": "^4.10.2",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@opd/g2plot-react": "^1.5.2",
@@ -21,6 +22,7 @@
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-donut-chart": "^1.1.8",
+    "react-fittext": "^1.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
