--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "apexcharts": "^3.19.3",
     "chart.js": "^1.1.1",
     "express": "^4.17.1",
+    "history": "^5.0.0",
     "kayn": "^0.10.2",
     "react": "^16.13.1",
     "react-apexcharts": "^1.3.7",
@@ -23,6 +24,7 @@
     "react-dom": "^16.13.1",
     "react-donut-chart": "^1.1.8",
     "react-fittext": "^1.0.0",
+    "react-ga": "^3.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
