--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "^16.13.1",
     "react-apexcharts": "^1.3.7",
     "react-chartjs-2": "^2.9.0",
+    "react-cookie-consent": "^5.1.2",
     "react-dom": "^16.13.1",
     "react-donut-chart": "^1.1.8",
     "react-fittext": "^1.0.0",
